- index buttons will now be disabled when you cant move the level in that direction - deleting a level will now update the required level lists